Front page redesign. Also, all pages now HTML5

--- a/about/index.html
+++ b/about/index.html
@@ -1,32 +1,31 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>seedJS.org</title>
-		<meta name="description" content="CommonJS package manager and more.">
-		<meta name="keywords" content="seedjs, CommonJS, nodeJS, javascript">
-		<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" charset="utf-8">
-	</head>
-	<body>
-		<div id="main-body">
-		<h1>Seed.js: A Flexible Package Manager for JavaScript</h1>
-		<p>Seed is a system for distributing and installing shared JavaScript code currently built on <a href="http://nodejs.org">node.js</a> and Google v8.  The goal is to build a package manager that is simple to use, fast, and easy to modify to fit your project's coding style and conventions.</p>
-		<p>Seed is simple and fast out of the box.  It builds on the <a href="http://wiki.commonjs.com">CommonJS</a> package and module formats.  And Seed archives themselves are simple zipfiles that can download and install easily.  Even the interface is simple.  Just "seed install" to download a package and "seed push" to publish a package.</p>
-		<p>If you don't like the conventions used by Seed out of the box, no problem.  Virtually everything in Seed is pluggable.  You can replace the server API, package format, add support for new JS-based languages (such as CoffeeScript or Objective-J) and even swap out the require system itself if you like.</p>
-		<p>Implementation wise, Seed is nearly 100% JavaScript (with a small C extension to assist).  Even the Seed server is written in JavaScript.  If you have node.js installed, you're ready to start hacking.</p>
-		<p>JavaScript is still young as a general purpose scripting language.  A lot of people have different ideas about how the JavaScript ecosystem should function, including the best way to share and distribute code.  Our hope is that seed can provide a solid, fast foundation to build on while giving everyone the freedom to experiment with new ideas.</p>
-		<p>If you'd like to try Seed.js just follow the <a href="/download">Getting Started<a/> guide to get going.</p>
-		</div>
-		
-		<div id="nav">
-			<strong>
-				<a href="/">Home</a> ~ 
-				<a href="/download">Download</a> ~
-				<a href="/documentation">Documentation</a> ~
-				<a href="/community">Community</a> ~
-				<a href="http://blog.seedjs.org">Blog</a>
-			</strong>
-		</div>
-		
-	</body>
+  <head>
+    <title>seedJS.org</title>
+    <meta name="description" content="CommonJS package manager and more." />
+    <meta name="keywords" content="seedjs, CommonJS, nodeJS, javascript" />
+    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+  </head>
+  <body>
+    <nav>
+      <a href="/">Home</a> ~ 
+      <a href="/download">Download</a> ~
+      <a href="/documentation">Documentation</a> ~
+      <a href="/community">Community</a> ~
+      <a href="http://blog.seedjs.org/">Blog</a>
+    </nav>
+    <section>
+      <h1>Seed.js: A Flexible Package Manager for JavaScript</h1>
+      <p>Seed is a system for distributing and installing shared JavaScript code currently built on <a href="http://nodejs.org">node.js</a> and Google v8. The goal is to build a package manager that is simple to use, fast, and easy to modify to fit your project's coding style and conventions.</p>
+      <p>Seed is simple and fast out of the box. It builds on the <a href="http://wiki.commonjs.com">CommonJS</a> package and module formats. And Seed archives themselves are simple zipfiles that can download and install easily. Even the interface is simple. Just "seed install" to download a package and "seed push" to publish a package.</p>
+      <p>If you don't like the conventions used by Seed out of the box, no problem. Virtually everything in Seed is pluggable. You can replace the server API, package format, add support for new JS-based languages (such as CoffeeScript or Objective-J) and even swap out the require system itself if you like.</p>
+      <p>Implementation wise, Seed is nearly 100% JavaScript (with a small C extension to assist). Even the Seed server is written in JavaScript. If you have node.js installed, you're ready to start hacking.</p>
+      <p>JavaScript is still young as a general purpose scripting language. A lot of people have different ideas about how the JavaScript ecosystem should function, including the best way to share and distribute code. Our hope is that seed can provide a solid, fast foundation to build on while giving everyone the freedom to experiment with new ideas.</p>
+      <p>If you'd like to try Seed.js just follow the <a href="/download">Getting Started</a> guide to get going.</p>
+    </section>
+    <footer>
+      <p>Copyright &copy; 2010 Sprout Systems, Inc.</p>
+    </footer>
+  </body>
 </html>
