--- a/community/index.html
+++ b/community/index.html
@@ -1,48 +1,40 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>seedJS.org</title>
-		<meta name="description" content="CommonJS package manager and more.">
-		<meta name="keywords" content="seedjs, CommonJS, nodeJS, javascript">
-		<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" charset="utf-8">
-	</head>
-	<body>
-		<div id="main-body">
-			<h1 id="where_to_find_help">Where To Find Help</h1>
+  <head>
+    <title>seedJS.org</title>
+    <meta name="description" content="CommonJS package manager and more." />
+    <meta name="keywords" content="seedjs, CommonJS, nodeJS, javascript" />
+    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+  </head>
+  <body>
+    <nav>
+      <a href="/">Home</a> ~
+      <a href="/about">About</a> ~
+      <a href="/download">Download</a> ~
+      <a href="/documentation">Documentation</a> ~
+      <a href="http://blog.seedjs.org/">Blog</a>
+    </nav>
+    <section>
+      <h1>Where to Find Help</h1>
+      <p>To get help with seed.js, join the mailing list or IRC channel:</p>
+      <ul>
+        <li><a href="http://groups.google.com/group/seedjs">seed.js mailing list</a></li>
+        <li>IRC: #seed.js on freenode.net</li>
+        <li><a href="http://blog.seedjs.org">seed.js blog</a></li>
+      </ul>
 
-			<p>To get help with seed.js, join the mailing list or IRC channel:</p>
+      <h1>Making Changes to Seed / Getting the Code</h1>
+      <p>If you want to get the code for seed, just clone it on git at:</p>
+      <code>http://github.com/seedjs/seed</code>
+      <p>The best way to get a change looked at is to discuss it first on the mailing 
+      list. Then you can submit the patch via the mailing list or send a pull request to &#8216;sproutit&#8217; on Github.</p>
 
-			<ul>
-			<li><a href="http://groups.google.com/group/seedjs">seed.js mailing list</a></li>
-			<li>IRC: #seed.js on freenode.net</li>
-			<li><a href="http://blog.seedjs.org">seed.js blog</a></li>
-			</ul>
-
-			<h1 id="making_changes_to_seed_getting_the_code">Making Changes to Seed / Getting the Code</h1>
-
-			<p>If you want to get the code for seed, just clone it on git at:</p>
-
-			<pre><code>http://github.com/seedjs/seed
-			</code></pre>
-
-			<p>The best way to get a change looked at is to discuss it first on the mailing 
-			list.  Then you can submit the patch via the mailing list or send a pull request to &#8216;sproutit&#8217; on Github.</p>
-
-			<h1 id="contacting_the_author">Contacting the Author</h1>
-
-			<p>Seed is currently maintained by <a href="charles@sproutit.com">Charles Jolley</a></p>
-		</div>
-		
-		<div id="nav">
-			<strong>
-				<a href="/">Home</a> ~ 
-				<a href="/about">About</a> ~ 
-				<a href="/download">Download</a> ~
-				<a href="/documentation">Documentation</a> ~
-				<a href="http://blog.seedjs.org">Blog</a>
-			</strong>
-		</div>
-		
-	</body>
+      <h1>Contacting the Author</h1>
+      <p>Seed is currently maintained by <a href="charles@sproutit.com">Charles Jolley</a></p>
+    </section>
+    <footer>
+      <p>Copyright &copy; 2010 Sprout Systems, Inc.</p>
+    </footer>
+  </body>
 </html>
