Fix HTML5 bug in FireFox

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="CommonJS package manager and more." />
     <meta name="keywords" content="seedjs, CommonJS, nodeJS, javascript" />
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" media="screen, projection" />
   </head>
   <body>
     <header>
@@ -29,7 +29,7 @@
       <blockquote><code>
         #!/usr/bin/env seed<br />
         var markdown = require('markdown');<br />
-        markdown.html('__Hello World__');<br />
+        markdown.html('__Hello World__');
       </code></blockquote>
     </section>
     <footer>
