--- a/documentation/index.html
+++ b/documentation/index.html
@@ -12,7 +12,7 @@
       <a href="/">Home</a> ~
       <a href="/about">About</a> ~
       <a href="/download">Download</a> ~
-      <a href="/documentation">Documentation</a> ~
+      <a href="/community">Community</a> ~
       <a href="http://blog.seedjs.org/">Blog</a>
     </nav>
     <section>
