--- a/download/index.html
+++ b/download/index.html
@@ -11,8 +11,8 @@
     <nav>
       <a href="/">Home</a> ~
       <a href="/about">About</a> ~
-      <a href="/download">Download</a> ~
       <a href="/documentation">Documentation</a> ~
+      <a href="/community">Community</a> ~
       <a href="http://blog.seedjs.org/">Blog</a>
     </nav>
     <section>
