--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="/download">Download</a> ~
       <a href="/documentation">Documentation</a> ~
       <a href="/community">Community</a> ~
-      <a href="http://blog.seedjs.org">Blog</a>
+      <a href="http://blog.seedjs.org/">Blog</a>
     </nav>
     <section>
       <p>List the packages:</p>
