Split sections into <section>'s and fix a few documentation errors I created when I did a bulk search/replace

--- a/community/index.html
+++ b/community/index.html
@@ -23,13 +23,15 @@
         <li>IRC: #seed.js on freenode.net</li>
         <li><a href="http://blog.seedjs.org">seed.js blog</a></li>
       </ul>
-
+    </section>
+    <section>
       <h1>Making Changes to Seed / Getting the Code</h1>
       <p>If you want to get the code for seed, just clone it on git at:</p>
       <code>http://github.com/seedjs/seed</code>
       <p>The best way to get a change looked at is to discuss it first on the mailing 
       list. Then you can submit the patch via the mailing list or send a pull request to &#8216;sproutit&#8217; on Github.</p>
-
+    </section>
+    <section>
       <h1>Contacting the Author</h1>
       <p>Seed is currently maintained by <a href="charles@sproutit.com">Charles Jolley</a></p>
     </section>
