--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <header>
       <img src="/images/seeds.png" alt="seedJS.org" />
-      <h1>SEEDJS</h1>
-      <h2>Organizing your commonJS libraries</h2>
+      <hgroup>
+        <h1>SEEDJS</h1>
+        <h2>Organizing your commonJS libraries</h2>
+      </hgroup>
     </header>
     <nav>
       <a href="/about">About</a> ~
