--- a/download/index.html
+++ b/download/index.html
@@ -17,37 +17,40 @@
     </nav>
     <section>
       <h1>Getting Started with Seed.js</h1>
-      <h2>Step 1: Install Node</h2>
-      <p>You will need node.js installed to run seed.js.  If you haven't done so already, visit the <a href="http://nodejs.org/#download">node.js website</a> and follow the directions there.</p>
-
-      <h2>Step 2: Install Seed</h2>
-      <p>Right now you need to clone seed from git:</p>
-      <blockquote><code>
-        $ git clone git://github.com/seedjs/seed<br>
-        $ cd seed<br>
-        $ git submodule update --init
-      </code></blockquote>
-      <p>Then install seed by running the setup script:</p>
-      <blockquote><code>
-        $ ./scripts/install.js
-      </code></blockquote>
-
-      <p>You will need to add the seed bin directory to your path.  Open your bash profile (usually at ~/.profile) and add the following line:</p>
-      <blockquote><code>export PATH=~/.seeds/bin:$PATH</code></blockquote>
-      <p>Save and restart your terminal.  You should now be able to use seed.  (This process will be simplified further at some point.)</p>
-
-      <h2>Step 3: Using Seed</h2>
-      <p>To list all packages on the server:</p>
-      <blockquote><code>$ seed list --remote</code></blockquote>
-      <p>And install packages:</p>
-      <blockquote><code>$ seed install markdown</code></blockquote>
-      <p>To use seed in your app, you should start your app with 'seed-node' instead of 'node'.  This will bootstrap in the package manager.  Here is a simple system that uses Markdown for format "Hello World":</p>
-      <blockquote><code>
-        #!/usr/bin/env seed<br>
-        var markdown = require('markdown');<br>
-        markdown.html('__Hello World__');<br>
-      </code></blockquote>
-      <p>For more in-depth info check out <a href="/documentation">the documentation</a>.  That's all for now.  More docs to come.  If you need help, get in touch at #seed.js on freenode.</p>
+      <section>
+        <h2>Step 1: Install Node</h2>
+        <p>You will need node.js installed to run seed.js.  If you haven't done so already, visit the <a href="http://nodejs.org/#download">node.js website</a> and follow the directions there.</p>
+      </section>
+      <section>
+        <h2>Step 2: Install Seed</h2>
+        <p>Right now you need to clone seed from git:</p>
+        <blockquote><code>
+          $ git clone git://github.com/seedjs/seed<br>
+          $ cd seed<br>
+          $ git submodule update --init
+        </code></blockquote>
+        <p>Then install seed by running the setup script:</p>
+        <blockquote><code>
+          $ ./scripts/install.js
+        </code></blockquote>
+        <p>You will need to add the seed bin directory to your path.  Open your bash profile (usually at ~/.profile) and add the following line:</p>
+        <blockquote><code>export PATH=~/.seeds/bin:$PATH</code></blockquote>
+        <p>Save and restart your terminal.  You should now be able to use seed.  (This process will be simplified further at some point.)</p>
+      </section>
+      <section>
+        <h2>Step 3: Using Seed</h2>
+        <p>To list all packages on the server:</p>
+        <blockquote><code>$ seed list --remote</code></blockquote>
+        <p>And install packages:</p>
+        <blockquote><code>$ seed install markdown</code></blockquote>
+        <p>To use seed in your app, you should start your app with 'seed-node' instead of 'node'.  This will bootstrap in the package manager.  Here is a simple system that uses Markdown for format "Hello World":</p>
+        <blockquote><code>
+          #!/usr/bin/env seed<br>
+          var markdown = require('markdown');<br>
+          markdown.html('__Hello World__');<br>
+        </code></blockquote>
+        <p>For more in-depth info check out <a href="/documentation">the documentation</a>.  That's all for now.  More docs to come.  If you need help, get in touch at #seed.js on freenode.</p>
+      </section>
     </section>
     <footer>
       <p>Copyright &copy; 2010 Sprout Systems, Inc.</p>
